gobmkida/c0/gtp_print_code
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/gtp_print_code/src/interface/play_gtp.c:3858:34: error: use of undeclared identifier 'gtp_print_code_conversion'
gtp_printf( "%d", ( unsigned int)gtp_print_code_conversion[c]); 
                                 ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/gtp_print_code/src/obj/2/play_gtp.o] Error 1
